--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "snake-game",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "start": "parcel src/index.html",
     "test": "jest",
     "lint": "eslint src"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
+    "@babel/preset-env": "^7.24.7",
+    "eslint": "^8.23.1",
     "jest": "^29.2.0",
-    "eslint": "^8.23.1"
+    "jest-environment-jsdom": "^29.7.0",
+    "parcel": "^2.0.0"
   }
 }
