--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.7",
-    "eslint": "^8.23.1",
+    "@eslint/js": "^9.4.0",
+    "eslint": "^9.4.0",
+    "globals": "^15.4.0",
     "jest": "^29.2.0",
     "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.0.0"
