--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "npx parcel src/index.html --no-cache",
     "test": "jest",
     "lint": "eslint src",
-    "build": "babel src -d dist"
-
+    "build": "babel src -d dist",
+    "type": "module"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.7",
@@ -18,6 +18,9 @@
     "globals": "^15.4.0",
     "jest": "^29.2.0",
     "jest-environment-jsdom": "^29.7.0",
-    "parcel": "^2.0.0"
+    "parcel": "^2.12.0"
+  },
+  "dependencies": {
+    "@parcel/babel-preset-env": "^2.12.0"
   }
 }
